--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-transition-group": "1.x",
+    "react-transition-group": "^2.5.1",
     "styled-components": "^4.1.2"
   },
   "scripts": {
